[project]
name = "documentation-helper-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "certifi>=2026.6.17",
    "dotenv>=0.9.9",
    "langchain-community>=0.4.2",
    "langchain-docling>=2.0.0",
    "langchain-openai>=1.3.3",
    "langchain-pinecone>=0.2.13",
    "langchain-tavily>=0.2.18",
    "langchain-text-splitters>=1.1.2",
    "streamlit>=1.59.0",
    "tavily>=1.1.0",
]
